--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -173,3 +173,14 @@
 .animation-delay-8000 {
   animation-delay: 8s;
 }
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.hide-scrollbar::-webkit-scrollbar {
+    display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.hide-scrollbar {
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+}
